2002-12-06  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond.vim:
	* lilypond-font-lock.el: Put \longa as duration. Accept only 
	[a-zA-Z] for user defined identifiers. Separate note cases 
	with and without a duration (allow cis\longaX).

	* lilypond.words: Add words from Info.

2002-12-06  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* stepmake/stepmake/c++-rules.make: Compile fix (bison 1.28)

2002-12-05  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: Propose reverting buffer before a command if
	it was edited with an another editor.

2002-12-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* python/GNUmakefile (INSTALLATION_DIR1): install Python module
	into libdir

	* autogen.sh (srcdir): copy aclocal.m4 if newer. 

	* stepmake/aclocal.m4: STEPMAKE_LIBDIR.

2002-12-04  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond.words: take \words from Info-index.

2002-12-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/sodipodi.scm: Add instruction for generating pfa fonts.

2002-12-02  Heikki Junes <hjunes@cc.hut.fi>

	* make/lilypond.mandrake.spec.in: use %make and %makeinstall.

2002-12-01  Heikki Junes <hjunes@cc.hut.fi>

	* make/lilypond.mandrake.spec.in: set menu-items to lilypond-info 
	and lilypond-documentation.

2002-12-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/parser.yy: Compile fix (bison 1.75).

2002-12-01  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.7.9 released

	* scm/music-functions.scm (shift-one-duration-log): refactor.
	Use music-map.

	* input/regression/chord-tremolo.ly (texidoc): add dot test.

	* NEWS: update.

	* lily/font-interface.cc (get-font): take alist chain i.s.o. alist
	argument
	
	* scm/music-functions.scm (display-music): new function
	(music-map): change arg order.

	* input/regression/new-markup-syntax.scm: new file

	* lily/parser.yy (markup): add \markup { .. } syntax.

	* scm/new-markup.scm (override-markup): new function
	(lookup-markup): new function
	(music-markup): new function